# youtube-faster-whisper

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: url.txt
playground/: faster_whisper_play.py  yt_dlp_play.py
src/: youtube_whisper.py
src/cli/: main.py
src/playground/: README.md  yt_dlp_play.py
src/whisper/: subtitles.py  transcribe.py
src/youtube/: download.py
src/youtube_whisper/: whisper_wrapper.py  youtube_whisper.py
tests/whisper/: test_whisper.py
