[tool.poetry]
name = "youtube-whisper"
version = "0.1.0"
description = "Download youtube video with whisper generator subtitles"
authors = ["faker2048 <nspyia2002@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_whisper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
